# npc_engine

./: .gitattributes  .gitignore  404.html  README.md  __init__.py  index.html  npc-engine.py  npc-engine2.py  npc-engine3.py  pylint.conf  pyproject.toml  readme.md  record.txt  requirements.txt  run_code_check.py  sender.py  setup.py  yzj  yzj.pub
.github/workflows/: deploy.yml  deploy_doc_site.yml  pylint.yml  python-package.yml  release_linux.yml  release_mac_intel.yml  release_win.yml
convai/: convai.ipynb  openai_call.ipynb  router.ipynb  sender.ipynb  未命名.ipynb  未命名1.ipynb
convai/.ipynb_checkpoints/: npc-engine-checkpoint.ipynb  sender-checkpoint.ipynb
convai/bak/: sender-Copy1.ipynb
doc/: README.md  mkdocs.yml
doc/docs/: index.md
etc/feedback/: index.html
example_project/config/: llm_config.json
example_project/data/: npc_memory.db  reinforcement_learning.txt  stone91_mem.txt
modules/action/: index.html
modules/conversation/: index.html
nuwa/: README.md  __init__.py  pyproject.toml  requirements.txt  sender.ipynb
nuwa/doc/: README.md  mkdocs.yml
nuwa/src/: Nuwa.py  __init__.py  engine.py
nuwa/test/: README.md  test_conversation.py  test_database.py  test_embedding.py  test_npc_action.ipynb  test_npc_action.py
search/: search_index.json
src/: __init__.py  engine.py  send_utils.py  sender.py  template.py  test_conversation.ipynb  ttt.py
test/: game_sim.py  sender.ipynb  sss.py  test_conversation.ipynb  test_conversation.py  test_database.py  test_embedding.py  test_engine.py  test_npc_action.ipynb  test_npc_action.py
(+202 files in other folders)
