[tool.poetry]
name = "npc-engine"
version = "0.1.0"
description = "one that empowers massive NPC"
authors = ["CongniMatrix"]
readme = "README.md"
packages = [{include = "npc_engine"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.220"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
