[tool.poetry]
name = "npc-engine"
version = "0.1.0"
description = "one that empowers massive NPC"
authors = ["CongniMatrix"]
readme = "README.md"
packages = [{include = "npc_engine"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.220"
openai = "^0.27.8"
anybadge = "^1.14.0"
pickledb = "^0.9.2"
pinecone-client = "^2.2.2"
pytest = "^7.4.0"
urllib3 = "1.26.16"
sentence-transformers = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
